--- a/cloud-container-deploy/example-frontend/Dockerfile
+++ b/cloud-container-deploy/example-frontend/Dockerfile
@@ -1,7 +1,8 @@
 FROM ubuntu:24.04
 
 ENV DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC
-ENV REACT_APP_BACKEND_URL=http://localhost:8080
+# ENV REACT_APP_BACKEND_URL=http://localhost:8080
+ENV REACT_APP_BACKEND_URL=https://example-backend-jkvr.onrender.com
 
 WORKDIR /usr/src/app
 COPY . .
