--- a/.github/workflows/docker-push-e3.1.yaml
+++ b/.github/workflows/docker-push-e3.1.yaml
@@ -27,7 +27,7 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
-        context: ./e3.1-gha-pipeline/Dockerfile
+        context: ./e3.1-gha-pipeline/
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/express-app:v1.0.0
 
