--- a/e3.1-gha-pipeline/docker-compose.yaml
+++ b/e3.1-gha-pipeline/docker-compose.yaml
@@ -1,8 +1,15 @@
 services:
+  express-app:
+    image: arkb2023/express-app:latest
+    ports:
+      - 8080:8080
+    labels:
+      - "com.centurylinklabs.watchtower.enable=true"
+
   watchtower:
     image: containrrr/watchtower
     environment:
-      -  WATCHTOWER_POLL_INTERVAL=60 <em># Poll every 60 seconds</em>
+      - WATCHTOWER_POLL_INTERVAL=60
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     container_name: watchtower
