backend render url added to frontend dockerfile to set REACT_APP_BACKEND_URL

--- a/e3.2-gha-render-integration/example-frontend/Dockerfile
+++ b/e3.2-gha-render-integration/example-frontend/Dockerfile
@@ -2,7 +2,8 @@ FROM ubuntu:24.04
 
 ENV DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC
 # ENV REACT_APP_BACKEND_URL=http://localhost:8080
-ENV REACT_APP_BACKEND_URL=https://example-backend-jkvr.onrender.com
+#ENV REACT_APP_BACKEND_URL=https://example-backend-jkvr.onrender.com
+ENV REACT_APP_BACKEND_URL=https://example-backend-yyul.onrender.com
 
 WORKDIR /usr/src/app
 COPY . .
